syntax = "proto3";

option java_package = "marcinowski.pawel.foodmanager";
option java_multiple_files = true;

message BarcodeStorage {
    repeated BarcodeEntry entries = 1;
}
message BarcodeEntry {
    string productName = 1;
    string barcodeNumber = 2;
}